fix dialog z-index issue

--- a/webroot/src/scss/main.css
+++ b/webroot/src/scss/main.css
@@ -1059,7 +1059,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    z-index: 5;
+    z-index: 50;
 }
 
 .buying-dialog .title {
@@ -1150,7 +1150,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    z-index: 5;
+    z-index: 50;
 }
 
 .send-msg-dialog .title {
@@ -1193,7 +1193,7 @@
     top: 80px;
     left: 0;
     width: 100%;
-    z-index: 6;
+    z-index: 50;
 }
 
 .statistics-dialog ul {
@@ -1320,7 +1320,7 @@
     top: 20%;
     left: 5%;
     width: 90%;
-    z-index: 5;
+    z-index: 100;
 }
 
 .notify_btn {
@@ -1374,7 +1374,7 @@
     top: 20%;
     left: 0;
     width: 100%;
-    z-index: 5;
+    z-index: 50;
 }
 
 .recommend-dialog .title {
